--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
-.class=card-body1{
-	wid
+.card-header1{
+	color:white;
+	background-color:red;
 }
+
+
+.card-body1{
+      margin: 0;
+      padding: 0;
+      display: flex;
+    width:50;
+      height:100;
+      background-color: red;
+	   color:white;
+    }
+    
+    img {
+      max-width: 100%;
+      max-height: 1%;
+    }
