--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,10 @@
 	   color:white;
     }
     
-    img {
-      max-width: 100%;
-      max-height: 1%;
+     .card img {
+     .markdown-body img {
+    border-style: none;
+    max-width: 100%;
+    box-sizing: content-box;
+    background-color: rgb(255, 255, 255);
     }
