--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
     }
     
      .card img {
-     .markdown-body img {
+   height:665;
     border-style: none;
     max-width: 100%;
     box-sizing: content-box;
